@@ -35,6 +35,8 @@ Changes in version 2.16.0
  * Don't default to type constructors for out-of-scope names (#253 and
    #375)
 
+ * Fix Hoogle display of constructors (#361)
+
 Changes in version 2.15.0
 
  * Always read in prologue files as UTF8 (#286 and Cabal #1721)
